--- a/daydaymoney.htm
+++ b/daydaymoney.htm
@@ -2,12 +2,12 @@
 <!-- saved from url=(0092)file:///Users/bytdance/Desktop/MT%E5%AD%97%E7%AC%A6%E8%BD%AC%E6%8D%A2%E5%B7%A5%E5%85%B72.htm -->
 <html data-bs-theme="light"><head lang="en"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>MT字符转换工具</title>
-    <link rel="shortcut icon" href="https://mt.qqqvq.com/img/favicon.ico">
+    <title>字符转换工具</title>
+    <link rel="shortcut icon" href="/daydaymoney_files/05ok.jpg">
     <meta name="color-scheme" content="light dark">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <meta name="keywords" content="美团,美团字符,美团转换工具,美团字符转换工具,MT字符转换工具">
-    <meta name="description" content="美团字符转换工具是一款帮助大家快速转换字符格式化代码的工具">
+    <meta name="keywords" content="字符转换工具">
+    <meta name="description" content="">
     <script src="./daydaymoney_files/hm.js"></script><script src="./daydaymoney_files/hm(1).js"></script><script src="./daydaymoney_files/hm(2).js"></script><script src="./daydaymoney_files/jquery.min.js"></script>
     <script src="./daydaymoney_files/autodrak.js"></script>
     <script src="./daydaymoney_files/bootstrap.bundle.js"></script>
@@ -15,13 +15,7 @@
     <script charset="UTF-8" id="LA_COLLECT" src="./daydaymoney_files/js-sdk-pro.min.js"></script>
     <script>LA.init({id:"JuFXDHBtSVpHC23n",ck:"JuFXDHBtSVpHC23n"})</script>
     <script>//百度统计
-        var _hmt = _hmt || [];
-        (function() {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?4a4a152dba75c691e221289cb4f3a0a8";
-            var s = document.getElementsByTagName("script")[0]; 
-            s.parentNode.insertBefore(hm, s);
-        })();
+       
     </script>
     <style type="text/css" media="all">
         li {
