--- a/daydaymoney.htm
+++ b/daydaymoney.htm
@@ -3,7 +3,7 @@
 <html data-bs-theme="light"><head lang="en"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>字符转换工具</title>
-    <link rel="shortcut icon" href="/daydaymoney_files/05ok.jpg">
+    <link rel="shortcut icon" href="./daydaymoney_files/05ok.jpg">
     <meta name="color-scheme" content="light dark">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <meta name="keywords" content="字符转换工具">
